# Cpp-Code

./: README.md
drawing_fractal/: CMakeLists.txt  README.txt  main.cpp
drawing_fractal/include/: bitmap.hpp
drawing_fractal/src/: bitmap.cpp
fireworks_animation/: CMakeLists.txt  README.txt  main.cpp
fireworks_animation/include/: canvas.hpp
fireworks_animation/src/: canvas.cpp
neural_network/: CMakeLists.txt  README.md  main.cpp
neural_network/include/: exceptions.hpp  ml_perceptron.hpp  perceptron.hpp  utilities.hpp
neural_network/include/mnist/: mnist_reader.hpp
neural_network/src/: exceptions.cpp  ml_perceptron.cpp  perceptron.cpp  utilities.cpp
